netflix-k8s/NetflixFrontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-frontend
  labels:
    app: netflix-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netflix-frontend
  template:
    metadata:
      labels:
        app: netflix-frontend
    spec:
      containers:
      - name: netflixfrontend
        image: majdabbas99/netflifrontend
---
apiVersion: v1
kind: Service
metadata:
  name: service-netflix-frontend
spec:
  selector:
    app: netflix-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
