netflix-k8s/NetflixFrontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-frontend
spec:
  ingressClassName: nginx
  rules:
  - host: alon-netflix.fursa.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-netflix-frontend
            port:
              number: 3000
